<resources>
    <string name="app_name">Mobile Doctor</string>
    <string name="diagnostic_message">Tap to\n<big><b>Start</b></big>\nDiagnostic"</string>
    <string name="diagnosting_message">Diagnosting</string>
    <string name="wifi_signal_strength">WIFI signal strength</string>
    <string name="internet_connectivity">Internet connectivity</string>

    <!-- Status -->
    <string name="unknown">Unknown</string>
    <string name="disconnected">Disconnected</string>
    <string name="excellent">Excellent</string>
    <string name="good">Good</string>
    <string name="moderate">Moderate</string>
    <string name="poor">Poor</string>

    <!-- Instructions -->
    <string name="unknown_instruction">Unknown status</string>
    <string name="first_instruction">Start diagnostic anytime by\ntaping into the Skype logo</string>
    <string name="loading_instruction">Please wait while the diagnosis it\'s completed</string>
    <string name="good_connection_instruction">Everything looks good, have a nive meeting</string>
    <string name="low_connection_instruction">Ops! The internet  looks a bit slow\n
        Try connecting to another network. Contact your network provider
    </string>
    <string name="weak_connection_instruction">Something it\'s not right with your WIFI!\n
        Move closer to the WIFI access point or move around to get a better signal.\n
        Switch to another hotspot
    </string>

    <string name="tips_connection">
        Having problems with your Skype for Business calls?
        An Internet connection is the most likely culprit. A poor
        Internet connection can cause low-quality audio and
        video, delays, and dropped calls.\n\n
        If you have a slow connection, the following tips
        might help:\n\n
        Move closer to the WiFi access point or move around
        to get a better signal.\n\n
        Switch to another hotspot if available.\n\n
        Disable WiFi on your device and try enabling it again.\n\n
        If your modem, or router is old, then everything will
        seem to be running slow even with a fast connection. It
        might be worth upgrading your hardware if all else fails.
    </string>

    <string name="bacon">
        Bacon ipsum dolor amet alcatra ground round short ribs pastrami sausage tail pork chop short loin porchetta kielbasa flank. Cupim shankle chicken salami strip steak. Drumstick pork chop pork belly, andouille beef pastrami sirloin pig tail hamburger tenderloin strip steak ham hock biltong. T-bone beef sausage swine, ham hock venison cow pork belly shankle jowl kevin.
        Pig corned beef landjaeger tenderloin chicken. Bacon prosciutto rump, sirloin pig ham hock tri-tip chicken. Chicken landjaeger kielbasa corned beef. Sirloin biltong pork chicken tenderloin. Shank short ribs hamburger leberkas kielbasa chicken filet mignon tenderloin ground round tail meatloaf fatback. Swine tongue porchetta tenderloin turkey.
    </string>

    <!-- Summary messages -->
    <string name="sm_gw_gi">
        Instant Messaging: OK\n
        Audio Calls:  OK
    </string>

    <string name="sm_gw_mi">
        Instant Messaging: OK\n
        Audio Calls: Not OK
    </string>

    <string name="sm_gw_pi">
        Instant Messaging: Not Ok\n
        Audio Calls: Not OK
    </string>

    <string name="sm_mw_gi">
        Instant Messaging: OK\n
        Audio Calls: Warning
    </string>

    <string name="sm_mw_mi">
        Instant Messaging: OK\n
        Audio Calls: Not OK
    </string>

    <string name="sm_mw_pi">
        Instant Messaging: Not Ok\n
        Audio Calls: Not OK
    </string>

    <string name="sm_pw_gi">
        Should not occur otherwise issue with the measurement thresholds
    </string>

    <string name="sm_pw_mi">
        Should not occur otherwise issue with the measurement thresholds
    </string>

    <string name="sm_pw_pi">
        Instant Messaging: Not Ok\n
        Audio Calls: Not OK
    </string>

    <string name="sm_dw_gi">
        Instant Messaging: OK\n
        Audio Calls:  OK
    </string>

    <string name="sm_dw_mi">
        Instant Messaging: OK\n
        Audio Calls: Not OK
    </string>

    <string name="sm_dw_pi">
        Instant Messaging: Not OK\n
        Audio Calls: Not OK
    </string>

    <string name="sm_dw_di">
        Instant Messaging: Not OK\n
        Audio Calls: Not OK
    </string>

    <!-- Recommendation messages -->
    <string name="rm_gw_gi">
        Everything looks good, have a nice meeting !
    </string>

    <string name="rm_gw_mi">
        Insufficient Internet bandwidth for audio calls.\n
        Home Wi-Fi: check internet connectivity with your SP\n
        Public Wi-Fi: Try to connect to another public Wi-Fi hotspot
    </string>

    <string name="rm_gw_pi">
        Insufficient Internet bandwidth for  SfB.\n
        Home Wi-Fi: check internet connectivity with your SP\n
        Public Wi-Fi: Try to connect to another hotspot
    </string>

    <string name="rm_mw_gi">
        Bad SfB audio calls due to degraded Wi-Fi conditions.\n
        Try to get closer to the Wi-Fi Access Point\n
        Public Wi-Fi: try to connect to another hotspot
    </string>

    <string name="rm_mw_mi">
        Insufficient Internet bandwidth for  SfB audio calls.\n
        Home Wi-Fi: check internet connectivity with your SP\n
        Public Wi-Fi: Try to connect to another hotspot
    </string>

    <string name="rm_mw_pi">
        Insufficient Internet bandwidth for  SfB.\n
        Home Wi-Fi: check internet connectivity with your SP\n
        Public Wi-Fi: Try to connect to another hotspot
    </string>

    <string name="rm_pw_gi">
        Everything looks good, have a nice meeting !
    </string>

    <string name="rm_pw_mi">

    </string>

    <string name="rm_pw_pi">
        Insufficient Internet bandwidth for  SfB.\n
        Home Wi-Fi: check internet connectivity with your SP\n
        Public Wi-Fi: Try to connect to another hotspot
    </string>

    <string name="rm_dw_gi">
        Everything looks good, have a nice meeting !
    </string>

    <string name="rm_dw_mi">
        Insufficient Internet bandwidth for SfB audio calls.\n
        Use Skype for Business dial-back capability for joining meetings
    </string>

    <string name="rm_dw_pi">
        Insufficient Internet bandwidth for SfB audio calls.\n
        Use Skype for Business dial-back capability for joining meetings
    </string>

    <string name="rm_dw_di">
        Please turn on wifi or mobile data
    </string>

    <!-- Recommendations second screen messages -->
    <string name="rm2_gw_mi">
        Place holder screen if more detailed explanation  needed based on pilot feedback
    </string>

    <string name="rm2_gw_pi">
        Place holder screen if more detailed explanation  needed based on pilot feedback
    </string>

    <string name="rm2_mw_mi">
        Place holder screen if more detailed explanation  needed based on pilot feedback
    </string>

    <string name="rm2_mw_pi">
        Place holder screen if more detailed explanation  needed based on pilot feedback
    </string>

    <string name="rm2_pw_mi">
        Place holder screen if more detailed explanation  needed based on pilot feedback
    </string>

    <string name="rm2_pw_pi">
        Place holder screen if more detailed explanation  needed based on pilot feedback
    </string>

    <string name="rm2_dw_mi">
        Place holder screen if more detailed explanation  needed based on pilot feedback
    </string>

    <string name="rm2_dw_pi">
        Place holder screen if more detailed explanation  needed based on pilot feedback
    </string>


</resources>
