<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.MainActivity"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgvSkype"
                android:src="@drawable/cloud_default"
                android:layout_height="250dp"
                android:layout_width="250dp"
                android:layout_centerHorizontal="true" />

            <TextView
                android:id="@+id/txtvDiagnosticMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/diagnostic_message"
                android:textAlignment="center"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center"
                android:layout_centerVertical="true" />

        </RelativeLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_marginBottom="10dp">

            <ImageView
                android:id="@+id/imgvWifi"
                android:src="@drawable/wifi_default"
                android:layout_height="50dp"
                android:layout_width="50dp"
                android:layout_weight="1"
                android:layout_centerHorizontal="true"/>


            <ImageView
                android:id="@+id/imgvInternet"
                android:src="@drawable/internet_default"
                android:layout_height="50dp"
                android:layout_width="50dp"
                android:layout_weight="1"
                android:layout_centerHorizontal="true"/>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_marginBottom="2dp">

            <TextView
                android:id="@+id/txtvWifiStatus"
                android:layout_height="wrap_content"
                android:layout_width="35dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:text="@string/unknown"/>

            <TextView
                android:id="@+id/txtvInternetStatus"
                android:layout_height="wrap_content"
                android:layout_width="35dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:text="@string/unknown"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="35dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:text="@string/wifi_signal_strength"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="35dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:text="@string/internet_connectivity"/>


        </LinearLayout>


        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:indeterminateTint="@color/green"
            android:visibility="gone"/>

        <RelativeLayout
            android:id="@+id/rlAlert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:visibility="gone">

            <View
                android:id="@+id/vTopLine"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/gray"/>

            <ImageView
                android:id="@+id/imgvAlert"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/alert_moderate"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/txtvAlertMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/imgvAlert"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true" />

            <View
                android:id="@+id/vBottomLine"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_below="@id/imgvAlert"
                android:background="@color/gray"/>

        </RelativeLayout>


        <TextView
            android:id="@+id/txtvRecommendationMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_instruction"
            android:textSize="20dp"
            android:textAlignment="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="2dp"/>

        <TextView
            android:id="@+id/txtvExtraMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txtvHelpLink"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/txtvSignal"
            android:layout_marginTop="1dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>